# BGD-project

./: .env.example  .gitignore  README.md  agent.md  dataset.py  docker-compose.yml  main.py  pyproject.toml  start.bat  start.sh
benchmarks/: RESULTS.md  results.jsonl
docker/init/: 01_setup.sh
etl/: __init__.py  bronze.py  config.py  consumer_bronze.py  gold.py  pipeline.py  silver.py
scripts/: benchmark.py  consumer.py  consumer_common.py  consumer_info.py  consumer_status.py  create_topics.py  load_bronze.py  producer.py  settings.py
sql/00_infrastructure/: 02_watermark.sql  03_pipeline_log.sql  04_dlq.sql
sql/01_bronze/: 01_bronze_station_information.sql  02_bronze_station_status.sql
sql/02_silver/: 01_silver_station_information.sql  02_silver_station_status.sql
sql/03_gold/: 01_gold_station_availability.sql  02_gold_station_summary.sql  03_gold_region_summary.sql  04_gold_data_quality.sql  05_gold_station_daily.sql
