[project]
name = "bgd-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.14.2",
    "kafka-python>=2.3.2",
    "kagglehub>=1.0.1",
    "lz4>=4.4.5",
    "orjson>=3.11.9",
    "polars>=1.40.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]
